# verse-ply-uploader

./: CMakeLists.txt  README.md
build_files/cmake/modules/: FindRPLY.cmake
src/: display_glut.c  display_glut.h  main.c  main.h
